--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 MONGODB_URL = "mongodb+srv://zerotwo22:Zcve0BWmgODN8QZo@cluster0.oywp2nl.mongodb.net/"
-JWT_SECRET = "Zcve0BWmgODN8QZo"
+JWT_SECRET = "SECRET-JEK"
