initial image uploads

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 MONGODB_URL = "mongodb+srv://zerotwo22:Zcve0BWmgODN8QZo@cluster0.oywp2nl.mongodb.net/"
 JWT_SECRET = "SECRET-JEK"
+CLOUDINARY_API_SECRET = "TMAOFA8ABhaQ3UoUVGSSYEIPhQ0";
+CLOUDINARY_API_KEY = "654526152946167";
+CLOUDINARY_NAME = "dukyzvpsr";
