Initial file upload cloudinary integration

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ JWT_SECRET = "SECRET-JEK"
 CLOUDINARY_API_SECRET = "TMAOFA8ABhaQ3UoUVGSSYEIPhQ0";
 CLOUDINARY_API_KEY = "654526152946167";
 CLOUDINARY_NAME = "dukyzvpsr";
+EMAIL ="marsdaycare3@gmail.com";
+PASSWORD_EMAIL = "zruofombvdlvjvpt";
