--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "cloudinary": "^1.37.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "filereader": "^0.10.3",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
     "multer": "^1.4.5-lts.1",
